feat: AD login unit tests